
# Note: This crate must be built using build.sh

[package]
name = "messagefeed"
version = "0.16.0"
description = "Messagefeed program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
arrayref = "0.3.5"
solana-sdk-bpf-utils = { path = "../node_modules/@solana/web3.js/bpf-sdk/rust/rust-utils", version = "0.16.0" }

[workspace]
members = []

[lib]
crate-type = ["cdylib"]
name = "messagefeed"


