
# Note: This crate must be built using build.sh

[package]
name = "messagefeed"
version = "0.16.0"
description = "Messagefeed program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
arrayref = "0.3.5"
solana-sdk = { version = "0.22.2", default-features = false }

[features]
program = ["solana-sdk/program"]
default = ["program"]

[workspace]
members = []

[lib]
name = "messagefeed"
crate-type = ["cdylib"]
