
# Note: This crate must be built using build.sh

[package]
name = "messagefeed"
version = "0.16.0"
description = "Messagefeed program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
arrayref = "0.3.5"
num-derive = "0.2"
num-traits = "0.2"
solana-sdk = { version = "=1.0.9", default-features = false }
thiserror = "1.0"

[features]
program = ["solana-sdk/program"]
default = ["program"]

[workspace]
members = []

[lib]
name = "messagefeed"
crate-type = ["cdylib"]
