
# Note: This crate must be built using build.sh

[package]
name = "prediction-poll"
version = "0.16.0"
description = "Poll feed program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
prediction-poll-data = { path = "../program_data" }
solana-sdk = { version = "0.23.0", default-features = false }

[features]
program = ["solana-sdk/program"]
default = ["program"]

[lib]
name = "prediction_poll"
crate-type = ["cdylib"]
