
# Note: This crate must be built using build.sh

[package]
name = "prediction-poll"
version = "0.16.0"
description = "Poll feed program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
num-derive = "0.2"
num-traits = "0.2"
prediction-poll-data = { path = "../program_data" }
solana-sdk = { version = "=1.0.5", default-features = false }
solana-sdk-bpf-test = { git = "https://github.com/solana-labs/solana", default-features = false }
thiserror = "1.0"

[features]
program = ["solana-sdk/program"]
default = ["program"]

[lib]
name = "prediction_poll"
crate-type = ["cdylib"]
