[package]
name = "prediction-poll-data"
version = "0.16.0"
description = "Poll feed program data"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
arrayref = "0.3.5"
solana-sdk-bpf-utils = { path = "../../../node_modules/@solana/web3.js/bpf-sdk/rust/rust-utils" }
solana-sdk-bpf-no-std = { path = "../../../node_modules/@solana/web3.js/bpf-sdk/rust/rust-no-std", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
bpf = ["solana-sdk-bpf-no-std"]
wasm = ["wasm-bindgen"]
default = ["bpf"]

[lib]
name = "prediction_poll_data"
crate-type = ["rlib"]
