[package]
name = "prediction-poll-data"
version = "0.16.0"
description = "Poll feed program data"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
arrayref = "0.3.5"
solana-sdk = { git = "https://github.com/solana-labs/solana", default-features = false }
wasm-bindgen = { version = "0.2", optional = true }

[features]
program = ["solana-sdk/program"]
wasm = ["wasm-bindgen"]
default = ["program"]

[lib]
name = "prediction_poll_data"
crate-type = ["rlib"]
