[package]
name = "prediction-poll-wasm"
version = "0.16.0"
description = "Poll feed wasm"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
arrayref = "0.3.5"
console_error_panic_hook = "0.1"
js-sys = "0.3"
prediction-poll-data = { path = "../program_data", default-features = false, features = ["wasm"] }
solana-sdk-types = { path = "../solana_types" }
wasm-bindgen = "0.2"

[lib]
name = "prediction_poll_wasm"
crate-type = ["cdylib", "rlib"]
