[package]
name = "prediction-poll-wasm-bindings"
version = "0.16.0"
description = "Poll feed wasm bindings"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
arrayref = "0.3.5"
console_error_panic_hook = "0.1"
js-sys = "0.3"
solana-sdk = { version = "=1.0.5", default-features = false }
prediction-poll-data = { path = "../program_data", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"

[features]
program = ["solana-sdk/program"]
default = ["program"]

[lib]
name = "prediction_poll_wasm_bindings"
crate-type = ["cdylib", "rlib"]
